--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -25,7 +25,9 @@
 
 // Sections
 @import '/src/sections/hero/hero.scss';
+@import '/src/sections/stages/stages.scss';
 @import '/src/sections/info/info.scss';
+@import '/src/sections/helpfull/helpfull.scss';
 @import '/src/sections/leadForm/leadForm.scss';
 @import '/src/sections/guarantee/guarantee.scss';
 @import '/src/sections/prices/prices.scss';
@@ -34,6 +36,7 @@
 @import '/src/sections/benefits/benefits.scss';
 @import '/src/sections/portfolio/portfolio.scss';
 @import '/src/sections/portfolioList/portfolioList.scss';
+@import '/src/sections/cooperation/cooperation.scss';
 @import '/src/sections/services/services.scss';
 @import '/src/sections/reviews/reviews.scss';
 @import '/src/sections/reviewsList/reviewsList.scss';
