--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -24,6 +24,7 @@ $textNav: #2D194099;
 // Borders
 $borderGray: #F6F5F733;
 $borderGrayLight: #e2dfe5;
+$borderViolet: #2d1940;
 $borderViolet10: #2d19401a;
 $borderViolet15: #2d194026;
 $borderViolet40: #2d194066;
