--- a/src/pages/prodvizhenie.pug
+++ b/src/pages/prodvizhenie.pug
@@ -34,6 +34,239 @@
                 }
             )
 
+            +SectionBenefits({
+                title: 'Наша сила в&nbsp;подходе',
+                description: 'Никакого SEO-шаманства и&nbsp;обмана. Только продуманная стратегия, эффективные и&nbsp;проверенные методы продвижения, постоянный анализ и&nbsp;корректировка результатов',
+                items: [
+                    [
+                        {
+                            title: 'Погружаемся в&nbsp;бизнес',
+                            text: 'Изучаем не&nbsp;только сайт, но&nbsp;и&nbsp;бизнес в&nbsp;целом. Нам важно ясно представить модель вашего бизнеса, чтобы предложить максимально эффективное решение.'
+                        },{
+                            title: 'Находим точки роста',
+                            text: 'Анализируем конкурентов, прежнюю рекламную активность, находим возможности для роста. Не&nbsp;делаем шаблонные предложения&nbsp;&mdash; строим стратегию из&nbsp;данных.'
+                        },{
+                            title: 'Подбираем инструменты',
+                            text: 'Объединяем SEO с&nbsp;другими инструментами интернет-маркетинга. Выявляем слабые и&nbsp;масштабируем лучшие, чтобы быстрее добиваться результатов.'
+                        },{
+                            title: 'Работаем на&nbsp;результат',
+                            text: 'Ставим целью рост позиций, трафика и&nbsp;продаж. Чтобы все проходило гладко, постоянно оцениваем прогресс от&nbsp;кликов до&nbsp;продаж.'
+                        }
+                    ]
+                ]
+            })
+
+            +SectionProcess({
+                title: 'Мы становимся частью компании',
+                description: 'Погружаемся в&nbsp;бизнес клиента и&nbsp;учитываем в&nbsp;работе его специфику. Регулярно встречаемся, обсуждаем результаты, совместно находим работоспособные решения. Получается словно у&nbsp;вас появилась выделенная команда интернет-маркетологов.',
+                items: [
+                    {
+                        title: 'Заботимся о&nbsp;бизнесе',
+                        text: 'Мы&nbsp;хотим, чтобы наша работа имела смысл для клиентов, и&nbsp;она почти всегда измеряется в&nbsp;продажах.'
+                    },{
+                        title: 'Работаем открыто',
+                        text: 'Всем нужны гарантии и&nbsp;человек, отвечающий за&nbsp;результат. В&nbsp;нашей компании каждый проект ведет один менеджер, который полностью отвечает за&nbsp;исполнение договора.'
+                    },{
+                        title: 'Экономим деньги',
+                        text: 'Бизнесу важно достигать цели с&nbsp;минимальными затратами. У&nbsp;нас небольшая команда и&nbsp;нет лишних людей.'
+                    },{
+                        title: 'Показываем результат',
+                        text: 'Результат работы&nbsp;&mdash; это репутация. Делим всю работу на&nbsp;этапы. Присылаем понятные отчёты по&nbsp;статусам задач, позициям и&nbsp;трафику. Эффективность показываем в&nbsp;деньгах.'
+                    },{
+                        title: 'Заменяем целый отдел',
+                        text: 'Стали компанией, которая может целиком заменить отдел интернет-маркетинга.'
+                    }
+                ]
+            })
+
+            +SectionAdditional({
+                title: 'Полный контроль и&nbsp;ожидаемый результат',
+                items: [
+                    {
+                        icon: '/src/images/icon-star.svg',
+                        title: 'Контекстная реклама',
+                        text: 'Тщательно подбираем запросы, сочетаем ручную настройку и&nbsp;автоматизацию, тестируем. Мы&nbsp;найдем вам клиентов, заказы и&nbsp;заявки в&nbsp;поиске.'
+                    },{
+                        icon: '/src/images/icon-trend.svg',
+                        title: 'Рост вашего бизнеса',
+                        text: 'Создаем рекламу, которую хочется кликать. Размещаем на&nbsp;площадках, где находится ваша аудитория.'
+                    },{
+                        icon: '/src/images/icon-like.svg',
+                        title: 'Оптимизация',
+                        text: 'Улучшенный сайт, который нравится пользователям, Яндексу и&nbsp;Google'
+                    },{
+                        icon: '/src/images/icon-doc.svg',
+                        title: 'Все честно',
+                        text: 'Понятные отчеты по&nbsp;всем показателям поискового продвижения'
+                    }
+                ]
+            })
+
+            +SectionHelpfull
+
+            +SectionStages({
+                title: 'Как достигаем цели клиентов',
+                description: 'Под каждый проект собираем команду специалистов. Разрабатываем план работ и&nbsp;последовательно движемся от&nbsp;одного этапа к&nbsp;следующему. Регулярно замеряем результаты',
+                blocks: [
+                    {
+                        title: 'Однократные этапы',
+                        items: [
+                            {
+                                name: 'Вы отправляете заявку',
+                                text: 'Нужен текст'
+                            },{
+                                name: 'Понимаем задачу',
+                                text: 'Мы&nbsp;приезжаем к&nbsp;вам на&nbsp;встречу, выясняем всю информацию о&nbsp;бизнесе и&nbsp;целях продвижения, делаем аудит. Фиксируем понимание задачи.'
+                            },{
+                                name: 'Разрабатываем стратегию',
+                                text: 'Оцениваем эффективность вашего продвижения, находим возможности для роста по&nbsp;трафику и&nbsp;продажам. Готовим стратегию с&nbsp;перечнем задач, сроками и&nbsp;результатом.'
+                            }
+                        ]
+                    },{
+                        title: 'Ежемесячные этапы',
+                        items: [
+                            {
+                                name: 'Улучшаем сайт',
+                                text: 'Анализируем техническое состояние сайта, ищем способы повышения конверсии. Определяем, что изменить на&nbsp;сайте, чтобы получать больше заявок. Пишем&nbsp;ТЗ.'
+                            },{
+                                name: 'Создаем ссылочное окружение',
+                                text: 'Разрабатываем план привлечения трафика из&nbsp;поиска. Подбираем площадки, размещаем ссылки и&nbsp;статьи. Делаем так, чтобы сайт ранжировался лучше конкурентов.'
+                            },{
+                                name: 'Повышаем конверсию',
+                                text: 'Улучшаем структуру сайта. Готовим мета-данные для посадочных страниц. Корректируем оптимизацию страниц и&nbsp;внешних ссылок. Наполняем контентом.'
+                            },{
+                                name: 'Пишем качественный контент',
+                                text: 'Собираем семантическое ядро. Из&nbsp;поисковых запросов формируем темы для будущих статей. Оформляем статьи так, чтобы их&nbsp;лучше находили поисковые роботы.'
+                            },{
+                                name: 'Контролируем результаты',
+                                text: 'Замеряем все виды конверсий: позиции, количество и&nbsp;качество трафика, вовлеченность, доскроллы и&nbsp;возвраты на&nbsp;сайт. Присылаем краткий и&nbsp;понятный текстовый отчет.'
+                            }
+                        ]
+                    }
+                ]
+            })
+
+            +SectionGuarantee({
+                title: 'Гарантии',
+                items: [
+                    {
+                        name: 'Финансовую защиту от&nbsp;фильтров',
+                        text: 'Время от&nbsp;времени сайты попадают под фильтры поисковых систем. Если это случится во&nbsp;время нашей работы, мы&nbsp;выполним все работы по&nbsp;выведению за&nbsp;свой счет.'
+                    },{
+                        name: 'Динамику роста',
+                        text: 'Мы&nbsp;прописываем сроки в&nbsp;договоре и&nbsp;укладываемся в&nbsp;них в&nbsp;99% случаев. Иногда сдаем проекты раньше. А&nbsp;в&nbsp;целом&nbsp;&mdash; никаких сюрпризов.'
+                    },{
+                        name: 'Фиксированный бюджет',
+                        text: 'Мы&nbsp;фиксируем сумму за&nbsp;продвижение в&nbsp;договоре. Даже если поднимем сайт выше, чем планировали, приведем трафик сверх плана, вы&nbsp;ничего не&nbsp;доплачиваете.'
+                    }
+                ],
+                lead: {
+                    title: 'Обсудите с&nbsp;нашим экспертом вашу задачу,',
+                    text: 'и&nbsp;он&nbsp;подберет оптимальное решение с&nbsp;учетом всех специфик, сроков и&nbsp;бюджета.',
+                    button: 'Обсудить'
+                }
+            })
+
+            +SectionCooperation({
+                title: 'Модели сотрудничества ',
+                description: 'Есть несколько моделей продвижения. Какая из&nbsp;них подходит вам, мы&nbsp;сможем понять после детального разговора. Ниже приведена информация для предварительного ознакомления.',
+                items: [
+                    {
+                        title: 'Комфорт',
+                        text: 'Обговариваем бюджет на&nbsp;продвижение и&nbsp;формируем долгосрочный план работ по&nbsp;сайту. Работаем над продвижением месячными итерациями, после каждой из&nbsp;которых вы&nbsp;получаете понятные отчеты по&nbsp;работам, позициям, трафику и&nbsp;продажам. Данная модель является наиболее распространенной в&nbsp;работе консалтинговых SEO-агентств на&nbsp;западных рынках.',
+                        items: [
+                            {
+                                name: 'Эконом',
+                                value: '40 000 ₽',
+                                text: 'в месяц'
+                            },{
+                                name: 'Эконом+',
+                                value: '80 000 ₽',
+                                text: 'в месяц'
+                            },{
+                                name: 'Бизнес',
+                                value: '120 000 ₽',
+                                text: 'в месяц'
+                            },{
+                                name: 'Максимум',
+                                value: 'от 120 000 ₽',
+                                text: 'в месяц'
+                            }
+                        ]
+                    },{
+                        title: 'Трафик',
+                        text: 'На&nbsp;старте проекта фиксируем месячное количество пользователей, пришедших на&nbsp;сайт из&nbsp;поисковиков, а&nbsp;далее считаем любой органический non-brand трафик, который пришел свыше этой точки, результатом работы агентства. В&nbsp;конце месяца дополнительный трафик умножаем на&nbsp;заранее обговоренную стоимость одного привлеченного посетителя (которая зависит от&nbsp;тематики, конкуренции и&nbsp;сезонности).',
+                        items: [
+                            {
+                                name: 'Мин. абонентская плата',
+                                value: '40 000 ₽',
+                                text: 'в месяц'
+                            },{
+                                name: 'Плата за одного посетителя',
+                                value: 'от 5 ₽'
+                            }
+                        ]
+                    },{
+                        title: 'Позиции',
+                        text: 'На старте проекта фиксируем список запросов, по которым будем выводить сайт на первые позиции выдачи (в ТОП). Стоимость нахождения сайта в ТОПе варьируется в зависимости от уровня запросной конкуренции: чем она выше — тем выше стоимость. В процессе работы ежедневно «снимаем» позиции и в конце месяца делаем расчет по формуле: (стоимость нахождения сайта в ТОП-10 (-5,-3)) * (количество дней нахождения в ТОПе в отчетном периоде).',
+                        items: [
+                            {
+                                name: 'Мин. абонентская плата',
+                                value: '40 000 ₽',
+                                text: 'в месяц'
+                            },{
+                                name: 'Плата за нахождение в&nbsp;ТОПе',
+                                value: 'от 7 ₽',
+                                text: 'в день'
+                            }
+                        ]
+                    },{
+                        title: 'Лиды',
+                        text: 'На этапе переговоров договариваемся о том, какие действия посетителя считаются целевыми (заявка на сайте, покупка, заполнение контактных данных). Затем оплачиваются только факт совершения целевого действия посетителем сайта.',
+                        items: [
+                            {
+                                name: 'Мин. абонентская плата',
+                                value: '40 000 ₽',
+                                text: 'в месяц'
+                            },{
+                                name: 'Плата за лид',
+                                value: 'По договоренности'
+                            }
+                        ]
+                    }
+                ]
+            })
+
+            +SectionReviews(true)
+
+            +SectionAdditional({
+                title: 'Вместе с&nbsp;SEO пригодится',
+                description: 'Сам по&nbsp;себе сайт не&nbsp;принесет вам денег. На&nbsp;него еще нужно привести целевой трафик, его необходимо рекламировать и&nbsp;продвигать. Он&nbsp;также требует определенной поддержки и&nbsp;обслуживания. Все эти задачи мы&nbsp;можем взять на&nbsp;себя.',
+                items: [
+                    {
+                        icon: '/src/images/icon-loupe.svg',
+                        title: 'Контекстная реклама',
+                        text: 'Тщательно подбираем запросы, сочетаем ручную настройку и&nbsp;автоматизацию, тестируем. Мы&nbsp;найдем вам клиентов, заказы и&nbsp;заявки в&nbsp;поиске.'
+                    },{
+                        icon: '/src/images/icon-heart.svg',
+                        title: 'Медийная реклама',
+                        text: 'Создаем рекламу, которую хочется кликать. Размещаем на&nbsp;площадках, где находится ваша аудитория.'
+                    },{
+                        icon: '/src/images/icon-loud.svg',
+                        title: 'Реклама в&nbsp;соцсетях',
+                        text: 'Разработаем SMM-стратегию, контент, настроим аналитику, будем мониторить упоминания и&nbsp;работать с&nbsp;отзывами. Превратим ваших подписчиков в&nbsp;почитателей.'
+                    },{
+                        icon: '/src/images/icon-chat.svg',
+                        title: 'Консультации',
+                        text: 'Изучаем подход вашей команды или подрядчика, находим и&nbsp;разбираем ошибки, помогаем делать правильно.'
+                    }
+                ]
+            })
+
+            +SectionForm
+
+            +print
+
         include ../components/footer/footer
     
     <script type="module" src="/src/js/index.js"></script>
