--- a/src/sections/sections.pug
+++ b/src/sections/sections.pug
@@ -9,7 +9,10 @@ include ./additional/additional
 include ./prices/prices
 include ./guarantee/guarantee
 include ./reviews/reviews
+include ./helpfull/helpfull
 include ./reviewsList/reviewsList
+include ./stages/stages
+include ./cooperation/cooperation
 include ./blog/blog
 include ./leadForm/leadForm
 include ./blogList/blogList
