--- a/src/components/lead-block/lead-block.scss
+++ b/src/components/lead-block/lead-block.scss
@@ -26,6 +26,11 @@
             margin-bottom: 30px;
         }
     }
+    &__text {
+        & + & {
+            margin-top: 30px;
+        }
+    }
     &__button {
         margin-top: 45px;
         & .button {
