--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -256,24 +256,24 @@ label {
     }
     &__title {
         & + .section__text {
-            margin-top: 34px;
+            padding-top: 34px;
             @media (min-width: 576px) {
-                margin-top: 33px;
+                padding-top: 33px;
             }
             @media (min-width: 768px) {
-                margin-top: 37px;
+                padding-top: 37px;
             }
             @media (min-width: 992px) {
-                margin-top: 35px;
+                padding-top: 35px;
             }
             @media (min-width: 1200px) {
-                margin-top: 34px;
+                padding-top: 34px;
             }
         }
     }
     &__text {
         & + & {
-            margin-top: 30px;
+            padding-top: 30px;
         }
     }
     &__link {
