--- a/src/sections/benefits/benefits.scss
+++ b/src/sections/benefits/benefits.scss
@@ -21,7 +21,6 @@
         max-width: 1200px;
     }
     &__list {
-        align-items: flex-start;
         margin-top: 15px;
         @media (min-width: 576px) {
             margin-top: 50px;
@@ -41,6 +40,7 @@
             }
         }
         &.--offset {
+            align-items: flex-start;
             & .benefits__item {
                 &:nth-child(even) {
                     @media (min-width: 992px) {
@@ -69,10 +69,17 @@
                 color: $textWhite;
             }
         }
-        &:first-child {
-            @media (min-width: 1920px) {
-                padding-left: 0;
+        &:not(:first-child):not(:last-child) {
+            & .pattern {
+                display: none;
             }
+            & .benefits__content {
+                @media (max-width: 991px) {
+                    margin: 0;
+                }
+            }
+        }
+        &:first-child {
             & .pattern {
                 top: -35px;
                 left: -45px;
@@ -91,41 +98,33 @@
                     left: -90px;
                 }
             }
+            
+        }
+        &:nth-child(2n + 1) {
+            @media (min-width: 1920px) {
+                padding-left: 0;
+            }
             & .benefits__content {
                 @media (min-width: 576px) {
-                    margin-left: 45px;
+                    margin-left: calc(45px + 15px);
                 }
                 @media (min-width: 768px) {
-                    margin-left: 60px;
+                    margin-left: calc(60px + 15px);
                 }
                 @media (min-width: 992px) {
-                    margin-left: 49px;
+                    margin-left: calc(49px + 15px);
                 }
                 @media (min-width: 1200px) {
-                    margin-left: 34px;
+                    margin-left: calc(34px + 15px);
                 }
                 @media (min-width: 1920px) {
-                    margin-left: 90px;
+                    margin-left: calc(90px + 15px);
                 }
             }
         }
-        &:last-child {
+        &:nth-child(2n + 2) {
             @media (min-width: 1920px) {
                 padding-right: 0;
-            }
-            & .pattern {
-                right: -60px;
-                bottom: -55px;
-                @media (min-width: 992px) {
-                    right: -50px;
-                    bottom: -53px;
-                }
-                @media (min-width: 1200px) {
-                    right: -34px;
-                }
-                @media (min-width: 1920px) {
-                    right: -67px;
-                }
             }
             & .benefits__content {
                 @media (min-width: 576px) {
@@ -139,6 +138,22 @@
                 }
                 @media (min-width: 1920px) {
                     margin-right: 67px;
+                }
+            }
+        }
+        &:last-child {
+            & .pattern {
+                right: -60px;
+                bottom: -55px;
+                @media (min-width: 992px) {
+                    right: -50px;
+                    bottom: -53px;
+                }
+                @media (min-width: 1200px) {
+                    right: -34px;
+                }
+                @media (min-width: 1920px) {
+                    right: -67px;
                 }
             }
         }
@@ -159,9 +174,11 @@
     }
     &__content {
         position: relative;
+        height: 100%;
     }
     &__info {
         position: relative;
+        height: 100%;
         padding: 45px 30px;
         background-color: $bgWhite;
         transition: $transitionLong;
