--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -23,6 +23,7 @@ $textNav: #2D194099;
 
 // Borders
 $borderGray: #F6F5F733;
+$borderGray10: #f6f5f71a;
 $borderGrayLight: #e2dfe5;
 $borderViolet: #2d1940;
 $borderViolet10: #2d19401a;
