--- a/src/pages/prodvizhenie.pug
+++ b/src/pages/prodvizhenie.pug
@@ -54,7 +54,7 @@
                         }
                     ]
                 ]
-            })
+            })(id="info")
 
             +SectionProcess({
                 title: 'Мы становимся частью компании',
