--- a/src/sections/leadForm/leadForm.pug
+++ b/src/sections/leadForm/leadForm.pug
@@ -30,11 +30,10 @@ mixin SectionForm()
                                     .form__label.text.text--body
                                         input.form__input(type="text" name="site")
                                         span.form__placeholder Адрес сайта
-                                .form__element.form__elementToHide.form__block.col-xl-4.col-lg-10.col-md-11.pr-lg-0.pr-md-1
+                                .form__element.form__elementToHide.form__block.col-lg-10.col-md-11.pr-xl-6.pr-lg-0.pr-md-1
                                     .form__label.text.text--body
                                         input.form__input(type="text" name="goal")
                                         span.form__placeholder Краткая постановка задачи
-                                .form__element.form__elementToHide.form__block.col-xl-6.col-lg-10.col-md-11.pr-xl-2.pr-lg-0.pr-md-1
                                 .form__element.form__elementToHide.col-xxl-10.col-lg-10.col-md-11.pr-lg-0.pr-md-1
                                     .form__button
                                         button.button.button--small.button--block(type="submit") Отправить заявку
