--- a/src/sections/reviews/reviews.pug
+++ b/src/sections/reviews/reviews.pug
@@ -1,15 +1,22 @@
-mixin SectionReviews(brands)
+mixin SectionReviews(brands, text)
     section.section.reviews 
         .container
             .row.no-gutters 
                 .col-xxl-8.col-lg-10
                     .section__header
                         .section__title.title.title--h2 Дорожим каждым клиентом
-                        p.section__text.text.text--body 
-                            | Доброе слово и кошке приятно, а получать слова благодарности 
-                            | за хорошо проделанную работу приятно вдвойне. За годы работы 
-                            | мы получили немало положительных отзывов, и приложим все силы 
-                            | для того, чтобы и дальше в полной мере оправдывать ожидания заказчиков.
+                        if text === 'body'
+                            p.section__text.text.text--body 
+                                | Доброе слово и кошке приятно, а получать слова благодарности 
+                                | за хорошо проделанную работу приятно вдвойне. За годы работы 
+                                | мы получили немало положительных отзывов, и приложим все силы 
+                                | для того, чтобы и дальше в полной мере оправдывать ожидания заказчиков.
+                        else 
+                            p.section__text.text.text--lead 
+                                | Доброе слово и кошке приятно, а получать слова благодарности 
+                                | за хорошо проделанную работу приятно вдвойне. За годы работы 
+                                | мы получили немало положительных отзывов, и приложим все силы 
+                                | для того, чтобы и дальше в полной мере оправдывать ожидания заказчиков.
                         a.section__link.link.link--dark.link--uppercase.link--right(href="/reviews") 
                             span.link__text Смотреть все отзывы
                             <svg class="link__icon" width="12" height="13" xmlns="http://www.w3.org/2000/svg"><path d="m1.227 6.15 3.915 3.675V.63h1.5v9.195l3.915-3.675h.975v1.065l-5.64 5.445-5.64-5.445V6.15h.975Z"></path></svg>
