--- a/src/sections/cooperation/cooperation.scss
+++ b/src/sections/cooperation/cooperation.scss
@@ -182,15 +182,27 @@
             }
         }
         &-type {
-            flex: 1 1 calc(50% - 20px);
-            max-width: 320px;
+            //flex: 1 1 calc(50% - 20px);
+            //max-width: 320px;
+            min-width: calc(50% - 20px);
             margin-top: 20px;
             @media (min-width: 576px) {
-                flex: 1 1 calc(50% - 33px);
+                //flex: 1 1 calc(50% - 33px);
+                min-width: calc(50% - 33px);
                 margin-top: 30px;
             }
             @media (min-width: 992px) {
-                flex: auto;
+                //flex: auto;
+                min-width: unset;
+                &:not(:last-of-type):nth-of-type(2n + 2) {
+                    margin-right: 20px;
+                    padding-right: 20px;
+                    border-right: 1px solid $borderViolet;
+                    @media (min-width: 576px) {
+                        margin-right: 33px;
+                        padding-right: 33px;
+                    }
+                }
             }
             &:nth-of-type(2n + 1) {
                 margin-right: 20px;
