--- a/src/sections/hero/hero.scss
+++ b/src/sections/hero/hero.scss
@@ -50,6 +50,15 @@
                     max-width: 825px;
                 }
             }
+            &__triggers {
+                margin-top: 30px;
+                @media (min-width: 768px) {
+                    margin-top: 45px;
+                }
+            }
+            &__scroll {
+                display: block;
+            }
         }
     }
     &.--sozdanie {
@@ -105,7 +114,7 @@
             }
             &__breadcrumbs {
                 &-content {
-                    @media (min-width: 768px) and (max-width: 1199px) {
+                    @media (min-width: 576px) and (max-width: 1199px) {
                         padding-left: 0;
                         padding-right: 0;
                     }
@@ -128,7 +137,7 @@
                         font-size: 60px;
                         line-height: 1.16;
                     }
-                    @media (min-width: 768px) and (max-width: 1199px) {
+                    @media (min-width: 576px) and (max-width: 1199px) {
                         padding-left: 0;
                         padding-right: 0;
                     }
@@ -145,7 +154,7 @@
                     @media (min-width: 768px) {
                         padding-bottom: 60px;
                     }
-                    @media (min-width: 768px) and (max-width: 1199px) {
+                    @media (min-width: 576px) and (max-width: 1199px) {
                         padding-left: 0;
                         padding-right: 0;
                     }
@@ -219,15 +228,15 @@
         & + .hero__title {
             & .hero__title-text,
             & .hero__title-bg {
-                padding-top: 39px;
+                padding-top: 30px;
+                @media (min-width: 576px) {
+                    padding-top: 25px;
+                }
                 @media (min-width: 768px) {
-                    padding-top: 61px;
+                    padding-top: 35px;
                 }
                 @media (min-width: 1200px) {
-                    padding-top: 45px;
-                }
-                @media (min-width: 1920px) {
-                    padding-top: 40px;
+                    padding-top: 50px;
                 }
             }
         }
@@ -264,7 +273,7 @@
             display: flex;
             align-items: baseline;
             padding: 39px 0 16px;
-            border-bottom: 1px solid $textGray60;
+            border-bottom: 1px solid $borderGray10;
         }
         &-item {
             color: $textWhite;
@@ -348,8 +357,9 @@
         padding: 0;
         &-text,
         &-bg {
-            text-transform: uppercase;
             padding: 45px 20px 0;
+            letter-spacing: 0.12em;
+            text-transform: uppercase;
             @media (min-width: 576px) {
                 padding: 45px 30px;
             }
