--- a/src/sections/portfolioList/portfolioList.pug
+++ b/src/sections/portfolioList/portfolioList.pug
@@ -9,9 +9,10 @@ mixin SectionPortfolioList(items)
                                 img.portfolioList__image(src=item.src, alt="Портфолио")
                             .portfolioList__info 
                                 .portfolioList__trigger
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                                 .portfolioList__name.title.title--mini= item.name
                                 p.portfolioList__text.text.text--body= item.text
 
