--- a/src/sections/reviewsList/reviewsList.scss
+++ b/src/sections/reviewsList/reviewsList.scss
@@ -32,16 +32,22 @@
                 margin-top: 60px;
             }
         }
+        &:hover {
+            & .reviewsList__card,
+            & .reviewsList__picture {
+                box-shadow: 0 40px 100px rgba(45,25,64,.15), 0 20px 50px rgba(0,0,0,.03);
+            }
+            & .reviewsList__zoom {
+                @media (min-width: 1200px) {
+                    opacity: 1;
+                    transform: none;
+                }
+            }
+        }
     }
     &__link {
         position: relative;
         z-index: 1;
-        &:hover {
-            & ~ .reviewsList__icon {
-                opacity: 1;
-                transform: none;
-            }
-        }
     }
     &__picture {
         position: relative;
@@ -49,6 +55,7 @@
         min-width: 161px;
         margin-left: 30px;
         box-shadow: $shadowCard;
+        transition: $transitionLong;
         z-index: 2;
         @media (min-width: 768px) {
             width: 219px;
@@ -64,7 +71,7 @@
             min-width: 412px;
         }
     }
-    &__icon {
+    &__zoom {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -73,12 +80,10 @@
         bottom: 10px;
         width: 30px;
         height: 30px;
-        opacity: 0;
-        will-change: opacity, transform;
         background-color: $bgVioletLight;
-        transform: translate3d(-25%, 0, 0);
-        transition: $transition;
+        transition: $transitionLong;
         pointer-events: none;
+        z-index: 1;
         @media (min-width: 768px) {
             width: 60px;
             height: 60px;
@@ -86,6 +91,18 @@
         @media (min-width: 1200px) {
             width: 80px;
             height: 80px;
+            opacity: 0;
+            will-change: opacity, transform;
+            transform: translate3d(-25%, 0, 0);
+        }
+    }
+    &__icon {
+        width: 19px;
+        @media (min-width: 768px) {
+            width: 38px;
+        }
+        @media (min-width: 1200px) {
+            width: 50px;
         }
     }
     &__card {
@@ -94,6 +111,7 @@
         padding: 30px;
         border-left: 1px solid $bgGray;
         background-color: $bgWhite;
+        transition: $transitionLong;
         z-index: 1;
         @media (min-width: 768px) {
             padding: 24px 30px 30px;
